# boovy

./: Cargo.toml
assets/: boat.glb  char.glb  char2.glb  lake.glb  sky.glb
assets/mats/ConcreteTiles/: color.ktx2  metalRough.ktx2
assets/mats/Sand/: color.ktx2  metalRough.ktx2  normal.ktx2
assets/mats/Wood/: color.ktx2  metalRough.ktx2  normal.ktx2
assets/mats/WoodPlank/: color.ktx2  metalRough.ktx2  normal.ktx2
assets/meshes/: error.blend  error.blend1  error.glb  meshslope.glb
assets/scenes/: save.roony
assets/templateScenes/: rectangle.roony
src/: editor.rs  editor_cam.rs  main.rs  part.rs  player.rs  prop.rs  testplate.rs  ui.rs  utils.rs
src/Bui/: boiler.rs  mod.rs
src/Bui/components/: colour_bg.rs  mod.rs  project_button.rs  top_button.rs  topbar.rs
src/Bui/routes/: editor.rs  mod.rs  startpage.rs
src/Butils/: loadScene.rs  mod.rs  saveScene.rs  stateManager.rs  template.rs
src/CThirdCam/: Cargo.toml
src/CThirdCam/src/: gamepad.rs  lib.rs  mouse.rs
src/editor/: editor_cam.rs
src/prop/: basicprop.rs  meshprop.rs
src/ui/: components.rs  routes.rs
src/ui/components/: colour_bg.rs  project_button.rs  top_button.rs  topbar.rs
src/ui/routes/: editor.rs  startpage.rs
src/utils/: saveScene.rs
