[package]
name = "boovy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# remove bevy ui for lunex
bevy = { version = "0.14.2", default-features = false, features = [
    # Core
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_audio",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    #"bevy_picking", idk what is wrong
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    #"bevy_ui", replaced with bevy lunex
    "multi_threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",

    # Core formats
    "png",    # PNG image format for simple 2D images
    "hdr",    # HDR images
    "ktx2",   # Preferred format for GPU textures
    "zstd",   # ZSTD compression support in KTX2 files
    "vorbis", # Audio: OGG Vorbis
] }
# bevy_obj = "0.14.0"
avian3d = "0.1.2"
egui="0.29.1"
bevy_egui="0.30.0"
bevy-inspector-egui = "0.27.0"
egui_dock="0.14.0"
bevy_third_person_camera = { path = "src/CThirdCam" }

#bevy lunex and dependencies
bevy_lunex = "0.2.4"
# bevy_mod_picking = { version = "0.20.1", default-features = false, features = [
#     "debug",
#     "selection",
#     "highlight",
# ] }
# bevy_eventlistener = "0.8.0"  # maybe uncesscery

strum = "0.26"
strum_macros = "0.26"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
