[package]
name = "boovy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# remove bevy ui for lunex
bevy = { version = "0.15.3", features = ["wayland","jpeg"]}
#avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
avian3d = "0.2.0"
bevy-inspector-egui = "0.30.0"
egui_dock="0.16.0"

strum = "0.27.1"
strum_macros = "0.27.1"
bevy_skein = "0.1.4"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
